Edit my ppp (#265)
* Add portfolio.

* Add tags to ppp.

* Remove extra project.

* Update help ug

* Add help tag to ppp.

* Update diagram caption.

* Add logging to sort feature.

* Update ppp.

* Update sort dg to remove setSort method.

* Amend list error message.

* Amend list diagram.

* Amend sort dg to change success rate to compatibility rate.

* Update sort ug success rate to compatibility.

* Update ppp.

* Change help ug.

* Add eof to ppp.

* Fix checkstyle.

* Update model stub.

* Fix compile test error.

* Amend ug to add mention of buttons.

* Update ppp.

* Update intro to add role.

* Update diagram name in ppp.

* Format ppp.

* Fix grammar.

* Check grammar.

* Make titles consistent.

* Add numbering.

* Update ppp.

* Add contribution.

--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -48,7 +48,7 @@ Responsibilities: Ensure proper coding standards are followed.
 
 === Yip Yen Peng
 image::yen-peng.png[width="150", align="left"]
-{empty}[http://github.com/Yen-Peng[github]] [<<johndoe#, portfolio>>]
+{empty}[http://github.com/Yen-Peng[github]] [<<yen-peng#, portfolio>>]
 
 Role: UI designer +
 Responsibilities: In charge of the UI design of the application.
